--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,7 @@ serde = { version = "^1", optional = true, features = [
 
 [dev-dependencies]
 postcard = "1.1"
+
+[patch.crates-io]
+embassy-sync = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
+embassy-time = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
